--- a/po/el.po
+++ b/po/el.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2_v2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-05 10:00+0200\n"
+"POT-Creation-Date: 2012-08-30 16:54+0200\n"
 "PO-Revision-Date: 2012-01-31 13:14+0200\n"
 "Last-Translator: DimFil <dimfil.sat@gmail.com>\n"
 "Language-Team: \n"
@@ -2370,6 +2370,9 @@ msgstr "Δυναμική αντίθεση"
 msgid "E"
 msgstr "E"
 
+msgid "EPG"
+msgstr ""
+
 #
 #
 msgid "EPG Selection"
@@ -2675,6 +2678,9 @@ msgid "Exit"
 msgstr "Έξοδος"
 
 msgid "Exit EPG"
+msgstr ""
+
+msgid "Exit Movieplayer?"
 msgstr ""
 
 #
@@ -4142,10 +4148,13 @@ msgstr "Νέα έκδοση:"
 msgid "News Current Affairs"
 msgstr ""
 
-#
-#
+msgctxt "button label, 'next screen'"
 msgid "Next"
-msgstr "Επόμενο"
+msgstr ""
+
+msgctxt "now/next: 'next' event label"
+msgid "Next"
+msgstr ""
 
 #
 #
@@ -4431,6 +4440,7 @@ msgstr ""
 msgid "Nothing to upgrade"
 msgstr "Τίποτα για αναβάθμιση"
 
+msgctxt "now/next: 'now' event label"
 msgid "Now"
 msgstr ""
 
@@ -4637,6 +4647,12 @@ msgstr "Κωδικός "
 #
 msgid "Pause movie at end"
 msgstr "Πάυση στο τέλος της ταινίας"
+
+msgid "Percentage Left"
+msgstr ""
+
+msgid "Percentage Right"
+msgstr ""
 
 msgid "Permanently delete all recordings in the trash can?"
 msgstr "Οριστική διαγραφή όλων των εγγραφών από τον κάδο;"
@@ -5212,10 +5228,9 @@ msgstr "Πιέστε ΟΚ για εναλλαγή της επιλογής."
 msgid "Press yellow to set this interface as default interface."
 msgstr "Πιέστε το ΚΙΤΡΙΝΟ για να τεθεί ως προεπιλεγμένη διεπαφή."
 
-#
-#
+msgctxt "button label, 'previous screen'"
 msgid "Prev"
-msgstr "Προηγούμενο"
+msgstr ""
 
 #
 #
@@ -5226,6 +5241,9 @@ msgstr "Προεπισκόπηση"
 #
 msgid "Preview menu"
 msgstr "Μενού προεπισκόπησης"
+
+msgid "Preview selected channel"
+msgstr ""
 
 #
 #
@@ -5246,6 +5264,12 @@ msgstr "Επεξεργασία"
 #
 msgid "Progress"
 msgstr "Πρόοδος"
+
+msgid "Progress Bar Left"
+msgstr ""
+
+msgid "Progress Bar Right"
+msgstr ""
 
 #
 #
@@ -5404,11 +5428,6 @@ msgstr "Εγγεγραμμένα αρχεία..."
 #
 msgid "Recording"
 msgstr "Εγγραφή..."
-
-#
-#
-msgid "Recording data sync size"
-msgstr "Μέγεθος sync δεδομένων εγγραφής"
 
 #
 msgid "Recording in progress"
@@ -10611,3 +10630,18 @@ msgstr "zap"
 #
 msgid "zapped"
 msgstr "zapped"
+
+#
+#
+#~ msgid "Next"
+#~ msgstr "Επόμενο"
+
+#
+#
+#~ msgid "Prev"
+#~ msgstr "Προηγούμενο"
+
+#
+#
+#~ msgid "Recording data sync size"
+#~ msgstr "Μέγεθος sync δεδομένων εγγραφής"
