--- a/po/nl.po
+++ b/po/nl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-05 10:00+0200\n"
+"POT-Creation-Date: 2012-08-30 16:54+0200\n"
 "PO-Revision-Date: 2011-10-14 19:15+0100\n"
 "Last-Translator: \n"
 "Language-Team:  <Benny.DeTandt@gmail.com>\n"
@@ -1647,6 +1647,9 @@ msgstr "Dynamic contrast"
 msgid "E"
 msgstr "O"
 
+msgid "EPG"
+msgstr ""
+
 msgid "EPG Selection"
 msgstr "EPG selectie"
 
@@ -1851,6 +1854,9 @@ msgstr "Afsluiten"
 
 msgid "Exit EPG"
 msgstr "EPG afsluiten"
+
+msgid "Exit Movieplayer?"
+msgstr ""
 
 msgid "Exit editor"
 msgstr "Editor afsluiten"
@@ -2865,8 +2871,13 @@ msgstr "Nieuwe versie:"
 msgid "News Current Affairs"
 msgstr ""
 
+msgctxt "button label, 'next screen'"
 msgid "Next"
 msgstr "Volgende"
+
+msgctxt "now/next: 'next' event label"
+msgid "Next"
+msgstr "Straks"
 
 msgid "No"
 msgstr "Nee"
@@ -3067,8 +3078,9 @@ msgstr ""
 msgid "Nothing to upgrade"
 msgstr "Geen updates gevonden"
 
+msgctxt "now/next: 'now' event label"
 msgid "Now"
-msgstr ""
+msgstr "Nu"
 
 msgid "Now Playing"
 msgstr "Weergave loopt"
@@ -3209,6 +3221,12 @@ msgstr "Wachtwoord"
 
 msgid "Pause movie at end"
 msgstr "Pauzeer afspelen aan het einde"
+
+msgid "Percentage Left"
+msgstr ""
+
+msgid "Percentage Right"
+msgstr ""
 
 msgid "Permanently delete all recordings in the trash can?"
 msgstr "Alle bestanden in de prullenbak nu permanent verwijderen?"
@@ -3597,6 +3615,7 @@ msgstr "Druk op OK om de selectie te de/activeren."
 msgid "Press yellow to set this interface as default interface."
 msgstr "Druk op geel om deze interface als standaard in te stellen."
 
+msgctxt "button label, 'previous screen'"
 msgid "Prev"
 msgstr "Vorige"
 
@@ -3605,6 +3624,9 @@ msgstr "Voorbeeld"
 
 msgid "Preview menu"
 msgstr "Voorbeeld menu"
+
+msgid "Preview selected channel"
+msgstr ""
 
 msgid "Primary DNS"
 msgstr "Primaire DNS"
@@ -3617,6 +3639,12 @@ msgstr "Proces"
 
 msgid "Progress"
 msgstr "Voortgang"
+
+msgid "Progress Bar Left"
+msgstr ""
+
+msgid "Progress Bar Right"
+msgstr ""
 
 msgid "Progress Small"
 msgstr "Voortgang klein"
@@ -3721,9 +3749,6 @@ msgstr "Opgenomen bestanden..."
 
 msgid "Recording"
 msgstr "Opname"
-
-msgid "Recording data sync size"
-msgstr "Sync grootte opname data"
 
 msgid "Recording in progress"
 msgstr "Opnemen bezig"
@@ -7354,3 +7379,12 @@ msgstr "zap"
 
 msgid "zapped"
 msgstr "zapte"
+
+#~ msgid "Next"
+#~ msgstr "Volgende"
+
+#~ msgid "Prev"
+#~ msgstr "Vorige"
+
+#~ msgid "Recording data sync size"
+#~ msgstr "Sync grootte opname data"
