[translations] NL update thanks Rob

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-12 11:02+0100\n"
-"PO-Revision-Date: 2012-08-12 14:29+0100\n"
+"POT-Creation-Date: 2012-08-30 17:43+0100\n"
+"PO-Revision-Date: 2012-08-30 20:34+0100\n"
 "Last-Translator: \n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -2625,6 +2625,9 @@ msgstr "Afsluiten"
 msgid "Exit EPG"
 msgstr "Verlaat EPG"
 
+msgid "Exit Movieplayer?"
+msgstr "Sluit moviedpeler?"
+
 msgid "Exit editor"
 msgstr "Editor afsluiten"
 
@@ -4034,8 +4037,8 @@ msgstr "Nieuwe versie:"
 msgid "News Current Affairs"
 msgstr "News/Actualiteiten"
 
-msgid "Next"
-msgstr "Volgende"
+msgid "Next: "
+msgstr "Volgende:"
 
 msgid "No"
 msgstr "Nee"
@@ -4271,9 +4274,6 @@ msgstr ""
 msgid "Nothing to upgrade"
 msgstr "Niets te upgraden"
 
-msgid "Now"
-msgstr "Nu"
-
 msgid "Now Playing"
 msgstr "Weergave loopt"
 
@@ -4286,6 +4286,9 @@ msgstr ""
 "in te stellen, maar zorg er voor dat u nog steeds de helderste grijze "
 "vlakken van elkaar kunt onderscheiden.\n"
 "Indien het resultaat goed is, drukt u op OK."
+
+msgid "Now: "
+msgstr "Nu:"
 
 msgid "Number"
 msgstr "Nummer"
@@ -4400,10 +4403,6 @@ msgstr ""
 
 msgid "Only change for debugging; default is 'Internal hdd only'."
 msgstr "Enige kans voor debuggen: default is 'alleen interne HDD'."
-
-msgid "Only change for debugging; default is 'Off'."
-msgstr ""
-"Verander deze waarde alleen ten behoeve van debugging; default is 'Uit'."
 
 msgid "Only extensions."
 msgstr "Alleen extensions"
@@ -4568,6 +4567,9 @@ msgstr "Picon"
 
 msgid "Picon and Service Name"
 msgstr "Picon en Service Naam"
+
+msgid "Picon width"
+msgstr "Picon breedte"
 
 msgid "Picture in Graphics"
 msgstr "Picture in Graphics"
@@ -4965,6 +4967,9 @@ msgstr "Voorbeeld"
 msgid "Preview menu"
 msgstr "Voorbeeld menu"
 
+msgid "Preview selected channel"
+msgstr "Preview geselecteerde kanaal"
+
 msgid "Primary DNS"
 msgstr "Primaire DNS"
 
@@ -5142,9 +5147,6 @@ msgstr "Opnameinstellingen"
 
 msgid "Recording Setup"
 msgstr "Opnameinstellingen"
-
-msgid "Recording data sync size"
-msgstr "Opnamedata sync grootte"
 
 msgid "Recording in progress"
 msgstr "Opname is bezig"
@@ -5870,6 +5872,9 @@ msgstr ""
 "Zender niet beschikbaar\n"
 "Controleer uw tuner configuratie!"
 
+msgid "Service width"
+msgstr "Kanaalnaam breedte"
+
 msgid "Serviceinfo"
 msgstr "Kanaalinfo"
 
@@ -6028,6 +6033,12 @@ msgstr "Stel de waardes in voor snel vooruit spelen."
 
 msgid "Set the values for slow-motion speeds."
 msgstr "Stel de waardes in voor afspelen in slow-motion."
+
+msgid "Set the width allocated to the picon."
+msgstr "Breedte beschikbaar voor picons"
+
+msgid "Set the width allocated to the service name."
+msgstr "Breedte beschikbaar voor kanaalnaam"
 
 msgid "Set time window to 1 hour"
 msgstr "Stel tijdvenster in op 1 uur"
@@ -10187,13 +10198,3 @@ msgstr "zap"
 
 msgid "zapped"
 msgstr "zapte"
-
-#~ msgid "If set to 'yes' epg will show 3D effect view."
-#~ msgstr "Als 'Ja' wordt gekozen, ziet u 3D effecten."
-
-#~ msgid ""
-#~ "Your box is not connected to the internet, please check your network "
-#~ "settings and try again."
-#~ msgstr ""
-#~ "Uw STB_BOX heeft geen internetverbinding. Controleer uw instellingen en "
-#~ "aansluitingen en probeer het opnieuw."
