--- a/po/cs.po
+++ b/po/cs.po
@@ -2303,7 +2303,7 @@ msgid "Exit EPG"
 msgstr "Zavřít EPG"
 
 msgid "Exit Movieplayer?"
-msgstr ""
+msgstr "Zavřít Movieplayer?"
 
 #
 msgid "Exit editor"
@@ -3557,11 +3557,11 @@ msgstr "zpravodajství, publicistika "
 
 msgctxt "button label, 'next screen'"
 msgid "Next"
-msgstr ""
+msgstr "Další"
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
-msgstr ""
+msgstr "Další"
 
 #
 msgid "No"
@@ -3805,7 +3805,7 @@ msgstr "Nic k aktualizaci"
 
 msgctxt "now/next: 'now' event label"
 msgid "Now"
-msgstr ""
+msgstr "Nyní"
 
 #
 msgid "Now Playing"
@@ -3979,10 +3979,10 @@ msgid "Pause movie at end"
 msgstr "zastavit film na konci"
 
 msgid "Percentage Left"
-msgstr ""
+msgstr "procenta vlevo"
 
 msgid "Percentage Right"
-msgstr ""
+msgstr "procenta vpravo"
 
 msgid "Permanently delete all recordings in the trash can?"
 msgstr "Trvale odstranit všechny záznamy z koše?"
@@ -4457,7 +4457,7 @@ msgstr "Stiskem žlutého tlačítka nastavíte tento interface jako standardní
 
 msgctxt "button label, 'previous screen'"
 msgid "Prev"
-msgstr ""
+msgstr "Předchozí"
 
 #
 msgid "Preview"
@@ -4468,7 +4468,7 @@ msgid "Preview menu"
 msgstr "Náhled menu"
 
 msgid "Preview selected channel"
-msgstr ""
+msgstr "Náhled vybraného kanálu"
 
 #
 msgid "Primary DNS"
@@ -4487,10 +4487,10 @@ msgid "Progress"
 msgstr "Průběh"
 
 msgid "Progress Bar Left"
-msgstr ""
+msgstr "pásky vlevo"
 
 msgid "Progress Bar Right"
-msgstr ""
+msgstr "pásky vpravo"
 
 msgid "Progress Small"
 msgstr "malý pásek"
@@ -7535,7 +7535,7 @@ msgstr ""
 "Zvolte prosím, co chcete dělat dál."
 
 msgid "Zap"
-msgstr ""
+msgstr "Přepnout"
 
 #
 msgid "Zap back to previously tuned service?"
