german translation updates by Frogman

--- a/po/de.po
+++ b/po/de.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-30 16:54+0200\n"
-"PO-Revision-Date: 2012-08-06 07:27+0100\n"
-"Last-Translator: daddelfalk <openpli.org forum>\n"
+"PO-Revision-Date: 2012-08-31 09:32+0100\n"
+"Last-Translator: Steffen\n"
 "Language-Team: OpenPLi <openpli.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -15,9 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "X-Generator: Pootle 2.0.3\n"
-"X-Poedit-Language: German\n"
 "X-Poedit-SourceCharset: iso-8859-15\n"
-"X-Poedit-Country: GERMANY\n"
 
 #
 msgid ""
@@ -2021,7 +2019,7 @@ msgid "E"
 msgstr "O"
 
 msgid "EPG"
-msgstr ""
+msgstr "EPG"
 
 #
 msgid "EPG Selection"
@@ -2036,7 +2034,7 @@ msgid "EPG language selection 2"
 msgstr "EPG Sprachwahl 2"
 
 msgid "EPG settings"
-msgstr "EPG Einstellungen"
+msgstr "EPG-Einstellungen"
 
 #
 #, python-format
@@ -2277,10 +2275,10 @@ msgid "Exit"
 msgstr "Beenden"
 
 msgid "Exit EPG"
-msgstr "Verlasse EPG"
+msgstr "EPG verlassen?"
 
 msgid "Exit Movieplayer?"
-msgstr ""
+msgstr "Movieplayer verlassen?"
 
 #
 msgid "Exit editor"
@@ -3385,7 +3383,7 @@ msgstr "N/V"
 
 #
 msgid "NEXT"
-msgstr "NÄCHSTE"
+msgstr "DANACH"
 
 #
 msgid "NFI Image Flashing"
@@ -3508,7 +3506,7 @@ msgstr "Vor"
 
 msgctxt "now/next: 'next' event label"
 msgid "Next"
-msgstr "Danach"
+msgstr "DANACH"
 
 #
 msgid "No"
@@ -3752,7 +3750,7 @@ msgstr "Keine Aktualisierungen"
 
 msgctxt "now/next: 'now' event label"
 msgid "Now"
-msgstr "Jetzt"
+msgstr "JETZT"
 
 #
 msgid "Now Playing"
@@ -3924,10 +3922,10 @@ msgid "Pause movie at end"
 msgstr "Am Filmende pausieren"
 
 msgid "Percentage Left"
-msgstr ""
+msgstr "Prozentangabe links"
 
 msgid "Percentage Right"
-msgstr ""
+msgstr "Prozentangabe rechts"
 
 msgid "Permanently delete all recordings in the trash can?"
 msgstr "Alle Aufnahmen im Mülleimer löschen?"
@@ -4416,7 +4414,7 @@ msgid "Preview menu"
 msgstr "Vorschau des DVD-Menüs"
 
 msgid "Preview selected channel"
-msgstr ""
+msgstr "Vorschau des ausgewählten Kanals"
 
 #
 msgid "Primary DNS"
@@ -4435,10 +4433,10 @@ msgid "Progress"
 msgstr "Fortschritt"
 
 msgid "Progress Bar Left"
-msgstr ""
+msgstr "Fortschrittsbalken links"
 
 msgid "Progress Bar Right"
-msgstr ""
+msgstr "Fortschrittsbalken rechts"
 
 #
 msgid "Progress Small"
@@ -7796,11 +7794,11 @@ msgstr "Kinder/Jugendprogramm (Allgemein)"
 
 #
 msgid "circular left"
-msgstr "Links-Zirkulär"
+msgstr "Links-zirkular"
 
 #
 msgid "circular right"
-msgstr "Rechts-Zirkulär"
+msgstr "Rechts-zirkular"
 
 #
 msgid "clear playlist"
@@ -9045,18 +9043,3 @@ msgstr "Umschalten"
 #
 msgid "zapped"
 msgstr "umgeschaltet"
-
-#
-#~ msgid "Next"
-#~ msgstr "Vor"
-
-#~ msgid "Now"
-#~ msgstr "Jetzt"
-
-#
-#~ msgid "Prev"
-#~ msgstr "Zurück"
-
-#
-#~ msgid "Recording data sync size"
-#~ msgstr "Data Sync-Speicher für das Aufnehmen"
