[translations] NL update thanks Rob

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-30 17:43+0100\n"
-"PO-Revision-Date: 2012-08-30 20:34+0100\n"
+"POT-Creation-Date: 2012-08-31 20:28+0100\n"
+"PO-Revision-Date: 2012-09-01 04:20+0100\n"
 "Last-Translator: \n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -2779,7 +2779,7 @@ msgid "Frame size in full view"
 msgstr "Framegrootte in vol beeld"
 
 msgid "Free Memory:"
-msgstr "Vrij geheugen:"
+msgstr "Vrij:"
 
 msgid "Free Swap:"
 msgstr "Vrije swap:"
@@ -3549,6 +3549,10 @@ msgstr "Laatste snelheid"
 msgid "Last used share: "
 msgstr "Laatst gebruikte share: "
 
+msgctxt "thrird evnet: 'third' event label"
+msgid "Later"
+msgstr "Later"
+
 msgid "Latitude"
 msgstr "Breedtegraad"
 
@@ -4037,8 +4041,9 @@ msgstr "Nieuwe versie:"
 msgid "News Current Affairs"
 msgstr "News/Actualiteiten"
 
-msgid "Next: "
-msgstr "Volgende:"
+msgctxt "now/next: 'next' event label"
+msgid "Next"
+msgstr "Straks"
 
 msgid "No"
 msgstr "Nee"
@@ -4274,6 +4279,10 @@ msgstr ""
 msgid "Nothing to upgrade"
 msgstr "Niets te upgraden"
 
+msgctxt "now/next: 'now' event label"
+msgid "Now"
+msgstr "nu"
+
 msgid "Now Playing"
 msgstr "Weergave loopt"
 
@@ -4286,9 +4295,6 @@ msgstr ""
 "in te stellen, maar zorg er voor dat u nog steeds de helderste grijze "
 "vlakken van elkaar kunt onderscheiden.\n"
 "Indien het resultaat goed is, drukt u op OK."
-
-msgid "Now: "
-msgstr "Nu:"
 
 msgid "Number"
 msgstr "Nummer"
@@ -7576,7 +7582,7 @@ msgid "Total"
 msgstr "Totaal"
 
 msgid "Total Memory:"
-msgstr "Totaal geheugen:"
+msgstr "Totaal:"
 
 msgid "Total Swap:"
 msgstr "Totale swap:"
