--- a/po/nl.po
+++ b/po/nl.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-31 20:28+0100\n"
-"PO-Revision-Date: 2012-09-01 04:20+0100\n"
+"POT-Creation-Date: 2012-09-06 10:48+0100\n"
+"PO-Revision-Date: 2012-09-06 14:10+0100\n"
 "Last-Translator: \n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -923,6 +923,12 @@ msgstr "Alpha"
 
 msgid "Alphanumeric"
 msgstr "Alfanumeriek"
+
+msgid "Altern"
+msgstr "Altern"
+
+msgid "Alternative numbering Mode"
+msgstr "Alternatieve nummering"
 
 msgid "Alternative services tuner priority"
 msgstr "Alternatieve tuner prioriteit"
@@ -6645,6 +6651,9 @@ msgstr "Sla positie op"
 msgid "Stored position"
 msgstr "Opgeslagen positie"
 
+msgid "Stream"
+msgstr "Stream"
+
 msgid "Stream request"
 msgstr "Stream verzoek"
 
@@ -8376,6 +8385,13 @@ msgid ""
 msgstr ""
 "Als deze optie is ingeschakeld wordt ook gecontroleerd op experimentele "
 "versies"
+
+msgid ""
+"With this option enabled, Channel numbers will start with '1' in each "
+"bouquet."
+msgstr ""
+"Als deze optie is gekozen, beginnen alle favorietenlijsten met kanaalnummer "
+"'1'."
 
 msgid ""
 "With this option enabled, pressing '0' will zap you to the first channel in "
