[translations] nl update

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-06 10:48+0100\n"
-"PO-Revision-Date: 2012-09-06 14:10+0100\n"
+"POT-Creation-Date: 2012-09-08 18:12+0100\n"
+"PO-Revision-Date: 2012-09-09 09:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -344,9 +344,6 @@ msgstr "2e informatiebalk "
 
 msgid "3"
 msgstr "3"
-
-msgid "30 Days"
-msgstr "30 dagen"
 
 msgid "3D Mode"
 msgstr "3D Mode"
@@ -1080,11 +1077,17 @@ msgstr "Automatisch"
 msgid "Automatic Scan"
 msgstr "Automatisch zoeken"
 
+msgid "Automatic image backup"
+msgstr "Automatische image backup"
+
 msgid "Automatic refresh"
 msgstr "Automatisch verversen"
 
 msgid "Automatic save"
 msgstr "automatisch opslaan"
+
+msgid "Automatic setting backup"
+msgstr "Automatische settings backup"
 
 msgid "Automatically update Client/Server View?"
 msgstr "Automatisch Klant/Server overzicht updaten??"
@@ -1122,6 +1125,9 @@ msgstr "Terug"
 msgid "Background"
 msgstr "Achtergrond"
 
+msgid "Background check"
+msgstr "Achtergronsd controle"
+
 msgid "Background delete option"
 msgstr "Verwijder op de achtergrond"
 
@@ -1148,6 +1154,9 @@ msgstr "Backup wordt uitgevoerd..."
 
 msgid "Backup system settings"
 msgstr "Back-up uw instellingen"
+
+msgid "BackupManager"
+msgstr "BackupManager"
 
 msgid "Band"
 msgstr "Band"
@@ -1930,9 +1939,6 @@ msgstr "DVD data format"
 
 msgid "DVD media toolbox"
 msgstr "DVD media gereedschap"
-
-msgid "Daily"
-msgstr "Dagelijks"
 
 msgid "Danish"
 msgstr "Deens"
@@ -3251,6 +3257,9 @@ msgstr "Image informatie"
 msgid "Image:"
 msgstr "Image:"
 
+msgid "ImageManager"
+msgstr "ImageManager"
+
 msgid "In Progress"
 msgstr "Is bezig"
 
@@ -4397,12 +4406,6 @@ msgstr "Een"
 msgid "One line"
 msgstr "Één regel"
 
-msgid "Online Update"
-msgstr "Online update"
-
-msgid "Online update"
-msgstr "Online update"
-
 msgid "OnlineVersionCheck"
 msgstr "Controle op update"
 
@@ -4544,8 +4547,27 @@ msgstr "Percentage links"
 msgid "Percentage Right"
 msgstr "Percentage rechts"
 
-msgid "Perform an online update check"
-msgstr "Controleer online op updates"
+msgid "Perform a full image backup"
+msgstr "Maak een volledige image backup"
+
+msgid "Perform a image backup before updating."
+msgstr "Maak een image backup alvorens te updaten"
+
+msgid "Perform a setting backup before updating."
+msgstr "Maak een settings  backup alvorens te updaten"
+
+msgid "Perform a setting backup,"
+msgstr "Maak een settings backup"
+
+msgid ""
+"Perform a setting backup, making a backup before updating is strongly "
+"advised."
+msgstr ""
+"Maak een settings backup; het maken van een backup alvorens te updaten wordt "
+"sterk geadviseerd."
+
+msgid "Perform an online update check in the background"
+msgstr "Controleer op de achtergrond op updates "
 
 msgid "Permanent Timeshift Enable"
 msgstr "Permanent Timeshift Inschakelen"
@@ -7799,6 +7821,9 @@ msgstr ""
 "Software update is bezig. Een ogenblik geduld a.u.b. Dit kan enkele minuten "
 "duren..."
 
+msgid "Upgrade and reboot system"
+msgstr "Upgrade en herstart system"
+
 msgid "Upgrade finished."
 msgstr "Upgrade voltooid."
 
@@ -8208,9 +8233,6 @@ msgstr "woensdag"
 
 msgid "Weekday"
 msgstr "Werkdag"
-
-msgid "Weekly"
-msgstr "Wekelijks"
 
 msgid ""
 "Welcome to the Cutlist editor.\n"
@@ -9401,6 +9423,9 @@ msgstr "Markeerpunt invoegen"
 msgid "invalid type"
 msgstr "ongeldig type"
 
+msgid "is strongly advised."
+msgstr "wordt sterk aangeraden."
+
 msgid "jazz"
 msgstr "jazz"
 
@@ -9458,6 +9483,9 @@ msgstr "Doorlus naar"
 
 msgid "magazines/reports/documentary"
 msgstr "Tijdschriften/Reportages/Documentaire"
+
+msgid "making a backup before updating"
+msgstr "maken van een backup alvorens te updaten"
 
 msgid "manual"
 msgstr "handmatig"
@@ -10220,3 +10248,21 @@ msgstr "zap"
 
 msgid "zapped"
 msgstr "zapte"
+
+#~ msgid "30 Days"
+#~ msgstr "30 dagen"
+
+#~ msgid "Daily"
+#~ msgstr "Dagelijks"
+
+#~ msgid "Online Update"
+#~ msgstr "Online update"
+
+#~ msgid "Online update"
+#~ msgstr "Online update"
+
+#~ msgid "Perform an online update check"
+#~ msgstr "Controleer online op updates"
+
+#~ msgid "Weekly"
+#~ msgstr "Wekelijks"
